using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StringConts 
{
    public static string Enemies01Anim = "Enemies01State";
    public static string Boss01Anim = "Boss01State";
    public static string EnvironmentTag = "Environment";
    public static string Enemies02Anim = "Enemies02State";
    public static string PlayerMoveAnim = "PlayerMove";
    public static string PlayerFireAnim = "PlayerFire";
    public static string PlayerIsDead = "PlayDead";
}
